--- a/RUBert.ipynb
+++ b/RUBert.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "4916123e",
    "metadata": {},
    "outputs": [],
@@ -85,6 +85,7 @@
     "META_SIZE = 6\n",
     "METADATA_SIZE = 31\n",
     "VEC_SIZE = 300\n",
+    "FULL_CLASSES = 9\n",
     "\n",
     "# TOKENIZER = AutoTokenizer.from_pretrained(\"DeepPavlov/rubert-base-cased\")\n",
     "TOKENIZER = BertTokenizer.from_pretrained(\"SkolkovoInstitute/russian_toxicity_classifier\")"
@@ -135,8 +136,6 @@
     "\n",
     "# target to single label\n",
     "train[\"preprocessed_target\"] = train[\"target\"].apply(lambda x: [1 if str(i) in x.split(\",\") else 0 for i in range(9)])\n",
-    "# train[\"preprocessed_target\"] = train[\"target\"].str.split(\",\").apply(lambda x: x[0]).astype(int)\n",
-    "# train[\"preprocessed_target\"] = train[\"preprocessed_target\"].apply(lambda x: 0 if x == 0 else (1 if x == 8 else 2))\n",
     "\n",
     "# reset index\n",
     "train.reset_index(drop=True, inplace=True)\n",
@@ -261,23 +260,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f5f4b385",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LR = 2e-5\n",
-    "WEIGHT_DECAY = 1e-3\n",
-    "FIRST_LEVEL_CLASSES = 3\n",
-    "SECOND_LEVEL_CLASSES = 7\n",
-    "FULL_CLASSES = 9\n",
-    "MODEL_PATH = \"DeepPavlov/rubert-base-cased\"\n",
-    "\n",
-    "# MODEL_PATH = \"SkolkovoInstitute/russian_toxicity_classifier\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "d6a50966",
    "metadata": {},
@@ -309,14 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "c114c97e",
    "metadata": {},
    "outputs": [],
    "source": [
     "class RuBertModel(pl.LightningModule,):\n",
-    "    def __init__(self, is_train):\n",
+    "    def __init__(self, is_train, LR, WEIGHT_DECAY, MODEL_PATH):\n",
     "        super().__init__()\n",
+    "        \n",
+    "        # save hyperparams\n",
+    "        self.save_hyperparameters()\n",
+    "        \n",
     "        # utils\n",
     "        self.metric_accuracy = torchmetrics.Accuracy()\n",
     "        self.metric_f1 = torchmetrics.F1(num_classes=FULL_CLASSES, average=\"samples\")\n",
@@ -431,12 +417,14 @@
     "        self.val_accuracy_log.append(np.mean([i[\"accuracy\"].cpu() for i in outs]))\n",
     "        self.val_f1_log.append(np.mean([i[\"F1\"].cpu() for i in outs]))\n",
     "        \n",
+    "    \n",
+    "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "03a6e02d",
    "metadata": {
     "scrolled": true
@@ -458,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "82210cc9",
    "metadata": {},
    "outputs": [],
@@ -482,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "e7051d37",
    "metadata": {},
    "outputs": [],
@@ -502,80 +490,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "979a966d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at DeepPavlov/rubert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of the model checkpoint at DeepPavlov/rubert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "GPU available: True, used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 6.05 s, sys: 2.35 s, total: 8.4 s\n",
-      "Wall time: 11.2 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "# %%time\n",
-    "# bert_model = RuBertModel.load_from_checkpoint(\"data/models/RUBert_retrained.ckpt\", is_train=True)\n",
-    "# # checkpoint = pl.callbacks.ModelCheckpoint(monitor=\"val_loss\", mode = \"min\", dirpath=\"data/\", filename=\"RuBert\")\n",
-    "# logger = pl.loggers.TensorBoardLogger(save_dir=\"logs\", name=\"RuBert_retrained\", version=1)\n",
-    "\n",
-    "# trainer = pl.Trainer(gpus=1, max_epochs=7, logger=logger,\n",
-    "#                      default_root_dir=\"data/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "fe45a428",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa2b1c5e712f49568289c7cd42034acc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Predicting: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 10min 11s, sys: 825 ms, total: 10min 12s\n",
-      "Wall time: 10min 11s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%time\n",
     "# preds = trainer.predict(bert_model, dataloader_test)"
@@ -583,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "d15c2b69",
    "metadata": {},
    "outputs": [],
@@ -605,9 +523,204 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8eeaa54c",
+   "metadata": {},
+   "source": [
+    "#### Full data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d95249a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at DeepPavlov/rubert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of the model checkpoint at DeepPavlov/rubert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "GPU available: True, used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "   | Name             | Type      | Params\n",
+      "------------------------------------------------\n",
+      "0  | metric_accuracy  | Accuracy  | 0     \n",
+      "1  | metric_f1        | F1        | 0     \n",
+      "2  | RUBert_positive  | BertModel | 177 M \n",
+      "3  | RUBert_negative  | BertModel | 177 M \n",
+      "4  | linear_metadata  | Linear    | 8.2 K \n",
+      "5  | linear1_positive | Linear    | 393 K \n",
+      "6  | linear1_negative | Linear    | 393 K \n",
+      "7  | linear2_positive | Linear    | 131 K \n",
+      "8  | linear2_negative | Linear    | 131 K \n",
+      "9  | linear_out       | Linear    | 6.9 K \n",
+      "10 | relu             | ReLU      | 0     \n",
+      "11 | dropout1         | Dropout   | 0     \n",
+      "12 | dropout2         | Dropout   | 0     \n",
+      "------------------------------------------------\n",
+      "356 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "356 M     Total params\n",
+      "1,427.088 Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac8415d4afcb4fd69cc21a19df76f723",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2h 22min 57s, sys: 54min 59s, total: 3h 17min 56s\n",
+      "Wall time: 3h 17min 37s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# params\n",
+    "LR = 2e-5\n",
+    "WEIGHT_DECAY = 1e-3\n",
+    "MODEL_PATH = \"DeepPavlov/rubert-base-cased\"\n",
+    "\n",
+    "\n",
+    "bert_model = RuBertModel(is_train=True, LR=LR, WEIGHT_DECAY=WEIGHT_DECAY, MODEL_PATH=MODEL_PATH)\n",
+    "# checkpoint = pl.callbacks.ModelCheckpoint(monitor=\"val_loss\", mode = \"min\", dirpath=\"data/\", filename=\"RuBert\")\n",
+    "logger = pl.loggers.TensorBoardLogger(save_dir=\"logs\", name=\"RuBert_retrained\", version=2)\n",
+    "\n",
+    "trainer = pl.Trainer(gpus=1, max_epochs=7, logger=logger,\n",
+    "                     default_root_dir=\"data/\")\n",
+    "trainer.fit(bert_model, dataloader_fulltrain)\n",
+    "\n",
+    "# save model\n",
+    "trainer.save_checkpoint(\"data/models/RUBert_retrained_fulldata.ckpt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "dfb96e7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce949ebfac734a019489a87170df323f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Predicting: 6360it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 10min 22s, sys: 1.49 s, total: 10min 23s\n",
+      "Wall time: 10min 22s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "preds = trainer.predict(bert_model, dataloader_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1e495121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8af04e84868a4c8aaae835c904004d6f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50651 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 581 ms, sys: 1.65 ms, total: 583 ms\n",
+      "Wall time: 579 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# save test preds\n",
+    "submit = []\n",
+    "thresh1, thresh2, thresh3 = 0.5, 0.3, 0.2\n",
+    "\n",
+    "for pred in tqdm(preds):\n",
+    "    pred_batch = torch.where((pred > thresh1)[0])[0].detach().tolist()\n",
+    "    pred_batch = \",\".join([str(i) for i in pred_batch])\n",
+    "    if pred_batch == '':\n",
+    "        pred_batch = torch.where((pred > thresh2)[0])[0].detach().tolist()\n",
+    "        pred_batch = \",\".join([str(i) for i in pred_batch])\n",
+    "        if pred_batch == '':\n",
+    "            pred_batch = torch.where((pred > thresh3)[0])[0].detach().tolist()\n",
+    "            pred_batch = \",\".join([str(i) for i in pred_batch])\n",
+    "            if pred_batch == '':\n",
+    "                print(pred)\n",
+    "    submit.append(pred_batch)\n",
+    "    \n",
+    "sample_submission[\"target\"] = submit\n",
+    "sample_submission.to_csv(\"data/submissions/submission_rubert_retrained_fulldata.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d1a195",
+   "id": "2581506a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3246e64e",
    "metadata": {},
    "outputs": [],
    "source": []
