bilstm with attention

--- a/BiLstm wtih Attention.ipynb
+++ b/BiLstm wtih Attention.ipynb
@@ -264,8 +264,8 @@
     "\n",
     "        \"\"\"\n",
     "        # tokenization\n",
-    "        tokens_positive = tokenizer.tokenize(positive)\n",
-    "        tokens_negative = tokenizer.tokenize(negative)\n",
+    "        tokens_positive = self.tokenizer.tokenize(positive)\n",
+    "        tokens_negative = self.tokenizer.tokenize(negative)\n",
     "        # word2idx\n",
     "        tokens_positive = [word2idx[w] if w in word2idx else word2idx[\"<unk>\"] for w in tokens_positive]\n",
     "        tokens_negative = [word2idx[w] if w in word2idx else word2idx[\"<unk>\"] for w in tokens_negative]\n",
