--- a/experiments/EDA.ipynb
+++ b/experiments/EDA.ipynb
@@ -51,9 +51,9 @@
     }
    ],
    "source": [
-    "train = pd.read_csv(\"data/HeadHunter_train.csv\")\n",
-    "test = pd.read_csv(\"data/HeadHunter_test.csv\")\n",
-    "sample_submission = pd.read_csv(\"data/HeadHunter_sample_submit.csv\")\n",
+    "train = pd.read_csv(\"../data/HeadHunter_train.csv\")\n",
+    "test = pd.read_csv(\"../data/HeadHunter_test.csv\")\n",
+    "sample_submission = pd.read_csv(\"../data/HeadHunter_sample_submit.csv\")\n",
     "\n",
     "print(f\"Train shape: {train.shape} | Test shape: {test.shape}\")"
    ]
