--- a/Augmentations.ipynb
+++ b/Augmentations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "334d8f88",
    "metadata": {},
    "outputs": [],
@@ -28,21 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "084defc2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train shape: (50876, 12) | Test shape: (50651, 11)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train = pd.read_csv(\"data/HeadHunter_train.csv\")\n",
     "test = pd.read_csv(\"data/HeadHunter_test.csv\")\n",
+    "new_test = pd.read_csv(\"data/HeadHunter_new_train.csv\")\n",
     "sample_submission = pd.read_csv(\"data/HeadHunter_sample_submit.csv\")\n",
     "\n",
     "print(f\"Train shape: {train.shape} | Test shape: {test.shape}\")"
@@ -58,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e9476fae",
    "metadata": {},
    "outputs": [],
@@ -68,25 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3d281d3a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maksim/Desktop/hh_compete/data.py:78: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  train[\"positive\"] = train[\"positive\"].str.replace(\"\\*{6,6}\", \"организация\")\n",
-      "/home/maksim/Desktop/hh_compete/data.py:79: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  train[\"negative\"] = train[\"negative\"].str.replace(\"\\*{6,6}\", \"организация\")\n",
-      "/home/maksim/Desktop/hh_compete/data.py:80: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  test[\"positive\"] = test[\"positive\"].str.replace(\"\\*{6,6}\", \"организация\")\n",
-      "/home/maksim/Desktop/hh_compete/data.py:81: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  test[\"negative\"] = test[\"negative\"].str.replace(\"\\*{6,6}\", \"организация\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Preprocessing\n",
     "train, test = preprocessing(train.copy(), test.copy())"
@@ -154,35 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8c663fc7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "782c22afc4c84f68bfd00794c9b885df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/50876 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maksim/Desktop/hh_compete/data.py:146: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  torch.nn.Softmax()(positive_innapropriate.logits)\n",
-      "/home/maksim/Desktop/hh_compete/data.py:153: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  torch.nn.Softmax()(negative_innapropriate.logits)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train Augmentations (as test)\n",
     "train_positive_sentences, train_negative_sentences, train_meta, train_labels = augmentations(train, is_test=True)\n",
@@ -191,6 +144,24 @@
     "np.save(\"data/augmentations/train2_negative_sentences\", np.asarray(train_negative_sentences))\n",
     "np.save(\"data/augmentations/train2_meta\", np.asarray(train_meta))\n",
     "np.save(\"data/augmentations/train2_labels\", np.asarray(train_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80a17028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New test\n",
+    "train, test = preprocessing(train.copy(), new_test.copy())\n",
+    "\n",
+    "# Test augmentations\n",
+    "test_positive_sentences, test_negative_sentences, test_meta, _ = augmentations(test, is_test=True)\n",
+    "\n",
+    "np.save(\"data/augmentations/new_test_positive_sentences\", np.asarray(test_positive_sentences))\n",
+    "np.save(\"data/augmentations/new_test_negative_sentences\", np.asarray(test_negative_sentences))\n",
+    "np.save(\"data/augmentations/new_test_meta\", np.asarray(test_meta))"
    ]
   },
   {
@@ -234,7 +205,12 @@
     "# load test\n",
     "test_positive_sentences = np.load(\"data/augmentations/test_positive_sentences.npy\")\n",
     "test_negative_sentences = np.load(\"data/augmentations/test_negative_sentences.npy\")\n",
-    "test_meta = np.load(\"data/augmentations/test_meta.npy\")"
+    "test_meta = np.load(\"data/augmentations/test_meta.npy\")\n",
+    "\n",
+    "# load new test\n",
+    "new_test_positive_sentences = np.load(\"data/augmentations/new_test_positive_sentences.npy\")\n",
+    "new_test_negative_sentences = np.load(\"data/augmentations/new_test_negative_sentences.npy\")\n",
+    "new_test_meta = np.load(\"data/augmentations/new_test_meta.npy\")"
    ]
   },
   {
@@ -259,30 +235,20 @@
     "# save test\n",
     "for i in tqdm(range(len(test_positive_sentences))):\n",
     "    batch = np.array([test_positive_sentences[i], test_negative_sentences[i], list(test_meta[i])], dtype=\"object\")\n",
-    "    np.save(f\"data/augmentations/test/test_{i}\", batch)"
+    "    np.save(f\"data/augmentations/test/test_{i}\", batch)\n",
+    "    \n",
+    "# save new test\n",
+    "for i in tqdm(range(len(new_test_positive_sentences))):\n",
+    "    batch = np.array([new_test_positive_sentences[i], new_test_negative_sentences[i], list(new_test_meta[i])], dtype=\"object\")\n",
+    "    np.save(f\"data/augmentations/new_test/test_{i}\", batch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "686e5421",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3421ea77a6114a308f29f3aed0e62a26",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/50876 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load train\n",
     "train_positive_sentences = np.load(\"data/augmentations/train2_positive_sentences.npy\")\n",
@@ -307,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "311b58e4",
    "metadata": {},
    "outputs": [],
@@ -317,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cb321964",
    "metadata": {},
    "outputs": [],
@@ -339,39 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "875f28c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maksim/miniconda3/envs/hh_compete/lib/python3.9/site-packages/torch/nn/modules/rnn.py:62: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5877457997686522 and num_layers=1\n",
-      "  warnings.warn(\"dropout option adds dropout after all but last \"\n",
-      "GPU available: True, used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "/home/maksim/miniconda3/envs/hh_compete/lib/python3.9/site-packages/pytorch_lightning/trainer/data_loading.py:132: UserWarning: The dataloader, predict_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b92eea50e5b433eb28ac87ec8ba7a02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Predicting: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load model\n",
     "model = LSTMModel.load_from_checkpoint(\"data/models/Final_Model_lstm.ckpt\")\n",
@@ -382,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c55ef00b",
    "metadata": {},
    "outputs": [],
@@ -400,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "480e80b9",
    "metadata": {},
    "outputs": [],
@@ -414,12 +351,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c9cc799",
+   "cell_type": "markdown",
+   "id": "b3a5523f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Change target"
+   ]
   },
   {
    "cell_type": "code",
@@ -427,15 +364,29 @@
    "id": "ed9e73f0",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db8cc060",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# load train\n",
+    "train_positive_sentences = np.load(\"data/augmentations/train_positive_sentences.npy\")\n",
+    "train_negative_sentences = np.load(\"data/augmentations/train_negative_sentences.npy\")\n",
+    "train_meta = np.load(\"data/augmentations/train_meta.npy\")\n",
+    "train_labels = np.load(\"data/augmentations/train_labels.npy\")\n",
+    "\n",
+    "# load val\n",
+    "val_positive_sentences = np.load(\"data/augmentations/val_positive_sentences.npy\")\n",
+    "val_negative_sentences = np.load(\"data/augmentations/val_negative_sentences.npy\")\n",
+    "val_meta = np.load(\"data/augmentations/val_meta.npy\")\n",
+    "val_labels = np.load(\"data/augmentations/val_labels.npy\")\n",
+    "\n",
+    "# load test\n",
+    "test_positive_sentences = np.load(\"data/augmentations/test_positive_sentences.npy\")\n",
+    "test_negative_sentences = np.load(\"data/augmentations/test_negative_sentences.npy\")\n",
+    "test_meta = np.load(\"data/augmentations/test_meta.npy\")\n",
+    "\n",
+    "# load test\n",
+    "new_test_positive_sentences = np.load(\"data/augmentations/new_test_positive_sentences.npy\")\n",
+    "new_test_negative_sentences = np.load(\"data/augmentations/new_test_negative_sentences.npy\")\n",
+    "new_test_meta = np.load(\"data/augmentations/new_test_meta.npy\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -443,12 +394,37 @@
    "id": "dba72940",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save train\n",
+    "for i in tqdm(range(len(train_positive_sentences))):\n",
+    "    batch = np.array([train_positive_sentences[i], train_negative_sentences[i], list(train_meta[i]),\n",
+    "                  list(train_labels[i])], dtype=\"object\")\n",
+    "    batch[-1] = batch[-1][1:]\n",
+    "    np.save(f\"data/augmentations/train/train_{i}\", batch)\n",
+    "    \n",
+    "# # save val\n",
+    "for i in tqdm(range(len(val_positive_sentences))):\n",
+    "    batch = np.array([val_positive_sentences[i], val_negative_sentences[i], list(val_meta[i]),\n",
+    "                  list(val_labels[i])], dtype=\"object\")\n",
+    "    batch[-1] = batch[-1][1:]\n",
+    "    np.save(f\"data/augmentations/val/val_{i}\", batch)\n",
+    "    \n",
+    "# save test\n",
+    "for i in tqdm(range(len(test_positive_sentences))):\n",
+    "    batch = np.array([test_positive_sentences[i], test_negative_sentences[i], list(test_meta[i])], dtype=\"object\")\n",
+    "    np.save(f\"data/augmentations/test/test_{i}\", batch)\n",
+    "    \n",
+    "    \n",
+    "# save new_test\n",
+    "for i in tqdm(range(len(new_test_positive_sentences))):\n",
+    "    batch = np.array([new_test_positive_sentences[i], new_test_negative_sentences[i], list(new_test_meta[i])], dtype=\"object\")\n",
+    "    np.save(f\"data/augmentations/new_test/test_{i}\", batch)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9b2c383",
+   "id": "b9188a7e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -456,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a9ce73",
+   "id": "3f18f678",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -464,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ab70deb",
+   "id": "520bda5b",
    "metadata": {},
    "outputs": [],
    "source": []
