--- a/src/Predict.ipynb
+++ b/src/Predict.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # embeddings\n",
+    "# embeddings\n",
     "navec_model = Navec.load(\"data/navec_hudlit_v1_12B_500K_300d_100q.tar\")\n",
     "fasttext_model = fasttext.load_model(\"data/cc.ru.300.bin\")\n",
     "\n",
